--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -22,7 +22,7 @@ body {
     align-items: center;
     background-color: #1D232A;
     padding: 8px 16px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0, 0.16);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
 }
 
 .cabecalho__menu i::before {
@@ -46,6 +46,7 @@ body {
         padding: 16px 60px;
         height: 80px;
         box-sizing: border-box;
+        grid-column: 2;
     }
 
     .cabecalho__menu {
@@ -93,7 +94,7 @@ body {
 .menu-lateral {
     display: flex;
     background-color: #15191C;
-    height: 100vh;
+    height: calc(100vh);
     flex-direction: column;
     width: 75vw;
 
@@ -160,6 +161,15 @@ body {
     content: "\e90a";
 }
 
+@media screen and (min-width:1440px) {
+    .menu-lateral {
+        position: static;
+        width: 200px;
+        grid-column: 1;
+        grid-row: 1 / span 2;
+    }
+}
+
 .principal {
     padding: 24px 16px;
     display: grid;
@@ -171,14 +181,45 @@ body {
     font-weight: 700;
 }
 
-.cartao--destaque {
-    margin-bottom: 16px;
+.titulo-secao {
+    font-size: 1.2rem;
+    font-weight: 700;
 }
+
+@media screen and (min-width: 1440px) {
+    .principal {
+        display: grid;
+        grid-template-columns: auto 1fr auto;
+        grid-template-areas: 
+            "titulo-pagina titulo-pagina titulo-pagina"
+            "destaque-video destaque-video videos-recentes"
+            "secao-videos secao-videos secao-videos"
+            "produtos-recentes destaque-produtos destaque-produtos"
+            "secao-produtos secao-produtos secao-produtos"
+        ;
+        column-gap: 32px;
+        padding: 16px 60px;
+        grid-column: 2;
+    }
+
+    .titulo-secao {
+        grid-column: span 4;
+    }
+}
+
 .cartao {
     width: 100%;
     border-radius: 15px;
     overflow: hidden;
     background-color: #2C343A;
+}
+
+.cartao--destaque {
+    margin-bottom: 16px;
+}
+
+.cartao__imagem--desktop {
+    display: none;
 }
 
 .cartao__conteudo {
@@ -246,12 +287,110 @@ body {
     margin-right: 8px;
 }
 
+.cartao--recentes {
+    display: none;
+}
+
+@media screen and (min-width: 1440px) {
+    .cartao--destaque {
+        margin-bottom: 0;
+    }
+
+    .cartao__imagem--mobile {
+        display: none;
+    }
+    
+    .cartao__imagem--desktop {
+        display: block;
+    }
+
+    .cartao__botao--destaque {
+        grid-column: auto;
+        padding: 16px 8px;
+    }
+
+    .cartao--recentes {
+        display: grid;
+        grid-template-columns: auto auto;
+        align-items: center;
+        row-gap: 24px;
+        width: 256px;
+        padding: 16px;
+        box-sizing: border-box;
+        align-self: flex-start;
+    }
+
+    .cartao--recentes .cartao__titulo {
+        grid-column: auto;
+    }
+    
+    .cartao__link {
+        font-size: .8rem;
+        font-weight: 600;
+        color: #0480DC;
+        justify-self: flex-end;
+    }
+    
+    .cartao__lista {
+        display: grid;
+        row-gap: 16px;
+        grid-column: span 2;
+    }
+    
+    .cartao__item {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        gap: 8px;
+    }
+    
+    .cartao__item-thumbnail {
+        width: 32px;
+        grid-row: span 2;
+    }
+    
+    .cartao__item-titulo {
+        font-size: .9rem;
+        line-height: 1.2rem;
+        font-weight: 700;
+    }
+    
+    .cartao__item-perfil {
+        font-size: 0.8rem;
+        color: #95999C;
+    }
+}
+
 .secao {
     display: grid;
     gap: 16px;
 }
 
-.titulo-secao {
-    font-size: 1.2rem;
-    font-weight: 700;
+@media screen and (min-width: 1440px) {
+    .secao {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .destaque-video {
+        grid-area: destaque-video;
+    }
+    
+    .videos-recentes {
+        grid-area: videos-recentes;
+    }
+    
+    .secao-videos {
+        grid-area: secao-videos;
+    }
+    
+    .destaque-produtos {
+        grid-area: destaque-produtos;
+    }
+    
+    .produtos-recentes {
+        grid-area: produtos-recentes;
+    }
+    
+    .secao-produtos {
+        grid-area: secao-produtos;
+    }
 }
