Melhorando página inicial

--- a/assets/css/main/cartaoBotao.css
+++ b/assets/css/main/cartaoBotao.css
@@ -15,9 +15,14 @@
     font-size: 24px;
 }
 
+.cartao__botao--produto::before {
+    content: "\e901";
+    font-size: 24px;
+}
+
 .cartao__botao--destaque {
     width: 100%;
-    grid-column: span 2;
+    grid-column: 2;
 }
 
 .cartao__botao--destaque::before {
