--- a/assets/css/main/cartaoInfo.css
+++ b/assets/css/main/cartaoInfo.css
@@ -13,3 +13,9 @@
     content: "\e90f";
     margin-right: 8px;
 }
+
+
+.cartao__info--valor::before {
+    content: "\e905";
+    margin-right: 8px;
+}
