--- a/assets/css/main/conteudoPrincipal.css
+++ b/assets/css/main/conteudoPrincipal.css
@@ -2,9 +2,12 @@
     padding: 24px 16px;
     display: grid;
     gap: 16px;
+
+    max-width: 380px;
+    margin: 0 auto;
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 820px) {
     .conteudo-principal {
         display: grid;
         grid-template-columns: auto 1fr auto;
@@ -18,6 +21,9 @@
         column-gap: 32px;
         padding: 16px 60px;
         grid-column: 2;
+
+        margin: 0;
+        max-width: none;
     }
 
     .destaque-video {
